# charcot-emr

./: .firebaserc  Cargo.toml  README.md  api.Dockerfile  docker-compose.yml  patient_1.med
.firebase/: hosting.cHVibGlj.cache
examples/: diabetes_management.charcot
frontend/: index.tsx  package.json
src/: lib.rs  main.rs
src/api/: e_prescribing_tests.rs  mod.rs  patient_portal.rs
src/auth/: auth_tests.rs  mod.rs  rbac_tests.rs
