[package]
name = "charcot-emr"
version = "0.1.0"
edition = "2021"
authors = ["Charcot Team"]
description = "A medical EMR system for the Charcot language"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
anyhow = "1.0"
sha2 = "0.10"
base64 = "0.21"
aes-gcm = "0.10"
rand = "0.8"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
eframe = "0.22"

[[bin]]
name = "emr_cli"
path = "src/main.rs"

[[bin]]
name = "emr_gui"
path = "src/bin/emr_gui.rs"
